Infrastructure/Final Assignment/airflow/logs/postgretomysql/create_postgresql_schema/2021-06-27T201137.377135+0000/1.log
[2021-06-27 20:11:38,949] {taskinstance.py:876} INFO - Dependencies all met for <TaskInstance: postgretomysql.create_postgresql_schema 2021-06-27T20:11:37.377135+00:00 [queued]>
[2021-06-27 20:11:39,012] {taskinstance.py:876} INFO - Dependencies all met for <TaskInstance: postgretomysql.create_postgresql_schema 2021-06-27T20:11:37.377135+00:00 [queued]>
[2021-06-27 20:11:39,015] {taskinstance.py:1067} INFO - 
--------------------------------------------------------------------------------
[2021-06-27 20:11:39,016] {taskinstance.py:1068} INFO - Starting attempt 1 of 2
[2021-06-27 20:11:39,023] {taskinstance.py:1069} INFO - 
--------------------------------------------------------------------------------
[2021-06-27 20:11:39,078] {taskinstance.py:1087} INFO - Executing <Task(PostgresOperator): create_postgresql_schema> on 2021-06-27T20:11:37.377135+00:00
[2021-06-27 20:11:39,110] {standard_task_runner.py:52} INFO - Started process 2151 to run task
[2021-06-27 20:11:39,153] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'postgretomysql', 'create_postgresql_schema', '2021-06-27T20:11:37.377135+00:00', '--job-id', '111', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/postgresmysql.py', '--cfg-path', '/tmp/tmpb03a6ugv', '--error-file', '/tmp/tmp8mlwuaur']
[2021-06-27 20:11:39,157] {standard_task_runner.py:77} INFO - Job 111: Subtask create_postgresql_schema
[2021-06-27 20:11:39,292] {logging_mixin.py:104} INFO - Running <TaskInstance: postgretomysql.create_postgresql_schema 2021-06-27T20:11:37.377135+00:00 [running]> on host b69deda3a989
[2021-06-27 20:11:39,473] {taskinstance.py:1282} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=tech@innospark.com
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgretomysql
AIRFLOW_CTX_TASK_ID=create_postgresql_schema
AIRFLOW_CTX_EXECUTION_DATE=2021-06-27T20:11:37.377135+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-06-27T20:11:37.377135+00:00
[2021-06-27 20:11:39,478] {postgres.py:70} INFO - Executing: -- Drop tables

DROP TABLE IF EXISTS test.invoice;

DROP TABLE IF EXISTS test.customer;

-- test.customer definition

CREATE TABLE IF NOT EXISTS test.customer (
	id int4 NOT NULL,
	firstname varchar NULL,
	lastname varchar NULL,
	address varchar NULL,
	phone varchar NULL,
	CONSTRAINT customer_pk PRIMARY KEY (id)
);

-- test.invoice definition

CREATE TABLE IF NOT EXISTS test.invoice (
	InvoiceID int4 NOT NULL,
	CustomerID int4 NULL,
	orderdate date NULL,
	subtotal float4 NULL
	CONSTRAINT invoice_pk PRIMARY KEY (InvoiceID),
	CONSTRAINT customer_fk FOREIGN KEY (CustomerID) REFERENCES test.customer(id)
);
[2021-06-27 20:11:39,512] {base.py:78} INFO - Using connection to: id: docker-postgres. Host: 172.27.240.1, Port: 5432, Schema: , Login: postgres, Password: ***, extra: {}
[2021-06-27 20:11:39,547] {dbapi.py:204} INFO - Running statement: -- Drop tables

DROP TABLE IF EXISTS test.invoice;

DROP TABLE IF EXISTS test.customer;

-- test.customer definition

CREATE TABLE IF NOT EXISTS test.customer (
	id int4 NOT NULL,
	firstname varchar NULL,
	lastname varchar NULL,
	address varchar NULL,
	phone varchar NULL,
	CONSTRAINT customer_pk PRIMARY KEY (id)
);

-- test.invoice definition

CREATE TABLE IF NOT EXISTS test.invoice (
	InvoiceID int4 NOT NULL,
	CustomerID int4 NULL,
	orderdate date NULL,
	subtotal float4 NULL
	CONSTRAINT invoice_pk PRIMARY KEY (InvoiceID),
	CONSTRAINT customer_fk FOREIGN KEY (CustomerID) REFERENCES test.customer(id)
);, parameters: None
[2021-06-27 20:11:39,564] {taskinstance.py:1481} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1137, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1311, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1341, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/providers/postgres/operators/postgres.py", line 72, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/hooks/dbapi.py", line 184, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/hooks/dbapi.py", line 208, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 25:  CONSTRAINT invoice_pk PRIMARY KEY (InvoiceID),
                                            ^

[2021-06-27 20:11:39,581] {taskinstance.py:1531} INFO - Marking task as UP_FOR_RETRY. dag_id=postgretomysql, task_id=create_postgresql_schema, execution_date=20210627T201137, start_date=20210627T201138, end_date=20210627T201139
[2021-06-27 20:11:39,686] {local_task_job.py:151} INFO - Task exited with return code 1
